# Finlife-OpenENV

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  api_server.py  github_README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
app/: __init__.py  config.py  environment.py  environment_enhanced.py  reward.py  simulator.py
app/data/: expanded_stocks.py  stocks_dataset.py
app/episode/: __init__.py  events.py  output.py  runner.py
app/logic/: __init__.py  actions.py  debt.py  decision_logger.py  environment_enhanced.py  goals.py  life_events.py  sip.py  transitions.py
app/logic/business/: business_operations.py  equity_stake.py  startup.py  venture_capital.py
app/logic/graders/: __init__.py  finlife_graders.py  task_easy.py  task_hard.py  task_medium.py
app/logic/health/: aging.py  disease_simulation.py  mental_health.py  wellness.py
app/logic/legal/: contract_management.py  estate_planning.py  fraud_detection.py  litigation.py
app/logic/market/: volatility.py
app/logic/social/: divorce.py  marriage.py  networking.py  relationships.py
app/logic/trading/: crypto.py
app/logic/visualization/: dashboard.py
app/models/: __init__.py  action.py  enhanced_action.py  enhanced_state.py  goal.py  observation.py  reward.py  state.py  task.py
docs/: HACKATHON_README.md  STRUCTURE.md  TASKS.md
scripts/: baseline.py  demo.py  generate_submission.py  run_episode.py  training_advanced.py  validate_submission.py  validate_system.py
server/: __init__.py  app.py
src/: config.py  inference.py
